Tutorial-Start_to_Finish-ScalarWaveCurvilinear's: implement optimized boundary condition, improve code comments.

--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
@@ -341,16 +341,21 @@
     "const int NUL     = +0;\n",
     "const int MINFACE = +1;\n",
     "\n",
-    "\n",
-    "#define OB_UPDATE(inner,which_gf, bc_gz_map, i0min,i0max, i1min,i1max, i2min,i2max, FACEX0,FACEX1,FACEX2) \\\n",
+    "#define OB_UPDATE_OUTER(which_gf, bc_gz_map, i0min,i0max, i1min,i1max, i2min,i2max, FACEX0,FACEX1,FACEX2) \\\n",
     "  LOOP_REGION(i0min,i0max, i1min,i1max, i2min,i2max) {                  \\\n",
     "    const int idx3 = IDX3(i0,i1,i2);                                    \\\n",
-    "    if(bc_gz_map[idx3].i0 == -1 && inner==0) {                          \\\n",
+    "    if(bc_gz_map[idx3].i0 == -1) {                                      \\\n",
     "      gfs[IDX4(which_gf,i0,i1,i2)] =                                    \\\n",
     "        +3.0*gfs[IDX4(which_gf,i0+1*FACEX0,i1+1*FACEX1,i2+1*FACEX2)]    \\\n",
     "        -3.0*gfs[IDX4(which_gf,i0+2*FACEX0,i1+2*FACEX1,i2+2*FACEX2)]    \\\n",
     "        +1.0*gfs[IDX4(which_gf,i0+3*FACEX0,i1+3*FACEX1,i2+3*FACEX2)];   \\\n",
-    "    } else if(bc_gz_map[idx3].i0 != -1 && inner==1) {                   \\\n",
+    "    }                                                                   \\\n",
+    "  }\n",
+    "\n",
+    "#define OB_UPDATE_INNER(which_gf, bc_gz_map, i0min,i0max, i1min,i1max, i2min,i2max, FACEX0,FACEX1,FACEX2) \\\n",
+    "  LOOP_REGION(i0min,i0max, i1min,i1max, i2min,i2max) {                  \\\n",
+    "    const int idx3 = IDX3(i0,i1,i2);                                    \\\n",
+    "    if(bc_gz_map[idx3].i0 != -1) {                                      \\\n",
     "      gfs[IDX4(which_gf,i0,i1,i2)] =                                    \\\n",
     "        gfs[IDX4(which_gf,                                              \\\n",
     "                 bc_gz_map[idx3].i0,                                    \\\n",
@@ -368,19 +373,32 @@
     "    int imin[3] = { NGHOSTS, NGHOSTS, NGHOSTS };\n",
     "    int imax[3] = { Nxx_plus_2NGHOSTS[0]-NGHOSTS, Nxx_plus_2NGHOSTS[1]-NGHOSTS, Nxx_plus_2NGHOSTS[2]-NGHOSTS };\n",
     "    for(int which_gz = 0; which_gz < NGHOSTS; which_gz++) {\n",
-    "      for(int inner=0;inner<2;inner++) {\n",
-    "        // After updating each face, adjust imin[] and imax[] \n",
-    "        //   to reflect the newly-updated face extents.\n",
-    "        OB_UPDATE(inner,which_gf, bc_gz_map, imin[0]-1,imin[0], imin[1],imax[1], imin[2],imax[2], MINFACE,NUL,NUL); imin[0]--;\n",
-    "        OB_UPDATE(inner,which_gf, bc_gz_map, imax[0],imax[0]+1, imin[1],imax[1], imin[2],imax[2], MAXFACE,NUL,NUL); imax[0]++;\n",
+    "      // First apply OUTER boundary conditions,\n",
+    "      //   in case an INNER (parity) boundary point\n",
+    "      //   needs data at the outer boundary:\n",
+    "      // After updating each face, adjust imin[] and imax[] \n",
+    "      //   to reflect the newly-updated face extents.\n",
+    "      OB_UPDATE_OUTER(which_gf, bc_gz_map, imin[0]-1,imin[0], imin[1],imax[1], imin[2],imax[2], MINFACE,NUL,NUL); imin[0]--;\n",
+    "      OB_UPDATE_OUTER(which_gf, bc_gz_map, imax[0],imax[0]+1, imin[1],imax[1], imin[2],imax[2], MAXFACE,NUL,NUL); imax[0]++;\n",
     "\n",
-    "        OB_UPDATE(inner,which_gf, bc_gz_map, imin[0],imax[0], imin[1]-1,imin[1], imin[2],imax[2], NUL,MINFACE,NUL); imin[1]--;\n",
-    "        OB_UPDATE(inner,which_gf, bc_gz_map, imin[0],imax[0], imax[1],imax[1]+1, imin[2],imax[2], NUL,MAXFACE,NUL); imax[1]++;\n",
+    "      OB_UPDATE_OUTER(which_gf, bc_gz_map, imin[0],imax[0], imin[1]-1,imin[1], imin[2],imax[2], NUL,MINFACE,NUL); imin[1]--;\n",
+    "      OB_UPDATE_OUTER(which_gf, bc_gz_map, imin[0],imax[0], imax[1],imax[1]+1, imin[2],imax[2], NUL,MAXFACE,NUL); imax[1]++;\n",
     "\n",
-    "        OB_UPDATE(inner,which_gf, bc_gz_map, imin[0],imax[0], imin[1],imax[1], imin[2]-1,imin[2], NUL,NUL,MINFACE); imin[2]--;\n",
-    "        OB_UPDATE(inner,which_gf, bc_gz_map, imin[0],imax[0], imin[1],imax[1], imax[2],imax[2]+1, NUL,NUL,MAXFACE); imax[2]++;\n",
-    "        if(inner==0) { for(int ii=0;ii<3;ii++) {imin[ii]++; imax[ii]--;} }\n",
-    "      }\n",
+    "      OB_UPDATE_OUTER(which_gf, bc_gz_map, imin[0],imax[0], imin[1],imax[1], imin[2]-1,imin[2], NUL,NUL,MINFACE); imin[2]--;\n",
+    "      OB_UPDATE_OUTER(which_gf, bc_gz_map, imin[0],imax[0], imin[1],imax[1], imax[2],imax[2]+1, NUL,NUL,MAXFACE); imax[2]++;\n",
+    "\n",
+    "      // Then apply INNER (parity) boundary conditions:\n",
+    "      for(int ii=0;ii<3;ii++) {imin[ii]++; imax[ii]--;}\n",
+    "      // After updating each face, adjust imin[] and imax[] \n",
+    "      //   to reflect the newly-updated face extents.\n",
+    "      OB_UPDATE_INNER(which_gf, bc_gz_map, imin[0]-1,imin[0], imin[1],imax[1], imin[2],imax[2], MINFACE,NUL,NUL); imin[0]--;\n",
+    "      OB_UPDATE_INNER(which_gf, bc_gz_map, imax[0],imax[0]+1, imin[1],imax[1], imin[2],imax[2], MAXFACE,NUL,NUL); imax[0]++;\n",
+    "\n",
+    "      OB_UPDATE_INNER(which_gf, bc_gz_map, imin[0],imax[0], imin[1]-1,imin[1], imin[2],imax[2], NUL,MINFACE,NUL); imin[1]--;\n",
+    "      OB_UPDATE_INNER(which_gf, bc_gz_map, imin[0],imax[0], imax[1],imax[1]+1, imin[2],imax[2], NUL,MAXFACE,NUL); imax[1]++;\n",
+    "\n",
+    "      OB_UPDATE_INNER(which_gf, bc_gz_map, imin[0],imax[0], imin[1],imax[1], imin[2]-1,imin[2], NUL,NUL,MINFACE); imin[2]--;\n",
+    "      OB_UPDATE_INNER(which_gf, bc_gz_map, imin[0],imax[0], imin[1],imax[1], imax[2],imax[2]+1, NUL,NUL,MAXFACE); imax[2]++;\n",
     "    }\n",
     "  }\n",
     "}"
@@ -755,11 +773,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "icc: remark #10397: optimization reports are generated in *.optrpt files in the output location\n",
+      "Compiling executable...\n",
+      "Executing `gcc -Ofast -fopenmp -march=native ScalarWaveCurvilinear/ScalarWaveCurvilinear_Playground.c -o ScalarWaveCurvilinear_Playground -lm`...\n",
+      "Finished executing in 0.620832920074 seconds.\n",
+      "Finished compilation.\n",
       "Executing `taskset -c 0,1,2,3 ./ScalarWaveCurvilinear_Playground 16  8 16`...\n",
-      "Finished executing in 0.420387029648 seconds.\n",
+      "Finished executing in 0.420562982559 seconds.\n",
       "Executing `taskset -c 0,1,2,3 ./ScalarWaveCurvilinear_Playground 24 12 24`...\n",
-      "Finished executing in 2.02863001823 seconds.\n"
+      "Finished executing in 3.02702903748 seconds.\n"
      ]
     }
    ],
@@ -776,7 +797,9 @@
     "    cmd.Execute(\"ScalarWaveCurvilinear_Playground\", \"24 24 24\", \"out-medresolution.txt\")\n",
     "else:\n",
     "    cmd.Execute(\"ScalarWaveCurvilinear_Playground\", \"16  8 16\", \"out-lowresolution.txt\")\n",
-    "    cmd.Execute(\"ScalarWaveCurvilinear_Playground\", \"24 12 24\", \"out-medresolution.txt\")"
+    "    cmd.Execute(\"ScalarWaveCurvilinear_Playground\", \"24 12 24\", \"out-medresolution.txt\")\n",
+    "    # For benchmarking purposes only. 97.91s icc desktop\n",
+    "#     cmd.Execute(\"ScalarWaveCurvilinear_Playground\", \"48 24 48\", \"out-hghresolution.txt\")"
    ]
   },
   {
@@ -904,7 +927,7 @@
       "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb to latex\n",
       "[NbConvertApp] Support files will be in Tutorial-Start_to_Finish-ScalarWaveCurvilinear_files/\n",
       "[NbConvertApp] Making directory Tutorial-Start_to_Finish-ScalarWaveCurvilinear_files\n",
-      "[NbConvertApp] Writing 93440 bytes to Tutorial-Start_to_Finish-ScalarWaveCurvilinear.tex\n",
+      "[NbConvertApp] Writing 95817 bytes to Tutorial-Start_to_Finish-ScalarWaveCurvilinear.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
