SEOBNR: update initial conditions, including all interpolation routines for the NQC corrections.

--- a/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -65,9 +65,11 @@
     "# See https://arxiv.org/abs/gr-qc/0508067 Section IV A\n",
     "import numpy as np\n",
     "from scipy.optimize import root\n",
+    "from scipy.interpolate import interp1d, interp2d\n",
     "from numpy.linalg import norm\n",
     "import factorized_modes as fm\n",
     "import NQC_corrections as nqc\n",
+    "import nqc_interp as nqi\n",
     "\n",
     "#Input variables: will eventually want to read in from another file/function\n",
     "m1 = 10.\n",
@@ -1413,24 +1415,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'NQC' is not defined",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-43-f25d18a717e2>, line 234)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-39-08ea8de49a81>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    142\u001b[0m             \u001b[0;31m#Why have I not computed NQC?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    143\u001b[0m             \u001b[0;31m#Before computing corretions, we have to compute actual NQC?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 144\u001b[0;31m             \u001b[0mhlm\u001b[0m \u001b[0;34m*=\u001b[0m \u001b[0mNQC\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    145\u001b[0m             \u001b[0;31m#START HERE, KNOWLES\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    146\u001b[0m         \u001b[0mflux\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0momega\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0momega\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mhlm\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mhlm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'NQC' is not defined"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-43-f25d18a717e2>\"\u001b[0;36m, line \u001b[0;32m234\u001b[0m\n\u001b[0;31m    NQC = #KNOWLES\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "# The following populations a matrix T_{lm} of resummed leading-order logarithms of tail effects\n",
+    "# The following populates a matrix T_{lm} of resummed leading-order logarithms of tail effects\n",
     "flux = 0.\n",
+    "\n",
+    "fa1 = interp1d(Domain, a1Range, kind='cubic')\n",
+    "fa2 = interp1d(Domain, a2Range, kind='cubic')\n",
+    "fa3 = interp1d(Domain, a3Range, kind='cubic')\n",
+    "fb1 = -interp1d(Domain, b1Range, kind='cubic')\n",
+    "fb2 = -interp1d(Domain, b2Range, kind='cubic')\n",
+    "\n",
+    "a1 = fa1(eta)\n",
+    "a2 = fa2(eta)\n",
+    "a3 = fa3(eta)\n",
+    "b1 = -fb1(eta)\n",
+    "b2 = -f(b2eta)\n",
+    "\n",
+    "fa3sAmax = interp2d(aDomain, etaDomain, Amaxa3sVal, kind='cubic')\n",
+    "fa4Amax = interp2d(aDomain, etaDomain, Amaxa4Val, kind='cubic')\n",
+    "fa5Amax = interp2d(aDomain, etaDomain, Amaxa5Val, kind='cubic')\n",
+    "fb3Amax = interp2d(aDomain, etaDomain, Amaxb3Val, kind='cubic')\n",
+    "fb4Amax = interp2d(aDomain, etaDomain, Amaxb4Val, kind='cubic')\n",
+    "\n",
+    "fa3sAmed = interp2d(aDomain, etaDomain, Ameda3sVal, kind='cubic')\n",
+    "fa4Amed = interp2d(aDomain, etaDomain, Ameda4Val, kind='cubic')\n",
+    "fa5Amed = interp2d(aDomain, etaDomain, Ameda5Val, kind='cubic')\n",
+    "fb3Amed = interp2d(aDomain, etaDomain, Amedb3Val, kind='cubic')\n",
+    "fb4Amed = interp2d(aDomain, etaDomain, Amedb4Val, kind='cubic')\n",
+    "\n",
+    "fa3sAmin = interp2d(aDomain, etaDomain, Amina3sVal, kind='cubic')\n",
+    "fa4Amin = interp2d(aDomain, etaDomain, Amina4Val, kind='cubic')\n",
+    "fa5Amin = interp2d(aDomain, etaDomain, Amina5Val, kind='cubic')\n",
+    "fb3Amin = interp2d(aDomain, etaDomain, Aminb3Val, kind='cubic')\n",
+    "fb4Amin = interp2d(aDomain, etaDomain, Aminb4Val, kind='cubic')\n",
+    "\n",
+    "chiAmaxCoeffs = [fa3sAmax[a,eta], fa4Amax[a,eta], fa5Amax[a,eta], fb3Amax[a,eta], fb4Amax[a,eta]]\n",
+    "chiAmedCoeffs = [fa3sAmed[a,eta], fa4Amed[a,eta], fa5Amed[a,eta], fb3Amed[a,eta], fb4Amed[a,eta]]\n",
+    "chiAminCoeffs = [fa3sAmin[a,eta], fa4Amin[a,eta], fa5Amin[a,eta], fb3Amin[a,eta], fb4Amin[a,eta]]\n",
+    "\n",
+    "chi = a/(1. - 2.*eta)\n",
+    "\n",
+    "if eta < 1.0e-15:\n",
+    "    chiAmax = (chi + 1.)/2.\n",
+    "    chiAmin = (chi - 1.)/2.\n",
+    "else:\n",
+    "    if chi <= 0:\n",
+    "        chiAmax = (1. + chi)*(1. - 2.*eta)/(1.+ dM - 2.*eta)\n",
+    "        if (1. + dm - 2.*eta + 2.*chi*(1. - 2.*eta))/(1. - dm - 2.*eta) < 1.:\n",
+    "            chiAmin = -(1. + chi)*(1. - 2.*eta)/(1. - dM - 2.*eta)\n",
+    "        else:\n",
+    "            chiAmin = -(1. - chi)*(1. - 2.*eta)/(1. + dm - 2.*eta)\n",
+    "    else:\n",
+    "        chiAmin = -(1. - chi)*(1. - 2.*eta)/(1. + dm - 2.*eta)\n",
+    "        if -(1. + dm - 2.*eta - 2.*chi*(1. - 2.*eta))/(1. - dm - 2.*eta) > -1.:\n",
+    "            chiAmax = (1. - chi)*(1. - 2.*eta)/(1. - dm - 2.*eta)\n",
+    "        else:\n",
+    "            chiAmax = (1. + chi)*(1. - 2.*eta)/(1. + dm - 2.*eta)\n",
+    "\n",
+    "chiAmed = (chiAmax + chiAmin)/2.\n",
+    "if chiAmax < 1.0e-15:\n",
+    "    cmax = 1.0\n",
+    "    cmed = 0.0\n",
+    "    cmin = 0.0\n",
+    "else:\n",
+    "    cmax =  (chiA - chiAmed)*(chiA - chiAmin)/(chiAmax - chiAmed)/(chiAmax - chiAmin)\n",
+    "    cmed = -(chiA - chiAmax)*(chiA - chiAmin)/(chiAmax - chiAmed)/(chiAmed - chiAmin)\n",
+    "    cmin =  (chiA - chiAmax)*(chiA - chiAmed)/(chiAmax - chiAmin)/(chiAmed - chiAmin)\n",
+    "\n",
+    "nqcmax = chiAmaxCoeffs[0]\n",
+    "nqcmed = chiAmedCoeffs[0]\n",
+    "nqcmin = chiAminCoeffs[0]\n",
+    "a3S = cmax*nqcmax + cmed*nqcmed + cmin*nqcmin\n",
+    "\n",
+    "nqcmax = chiAmaxCoeffs[1]\n",
+    "nqcmed = chiAmedCoeffs[1]\n",
+    "nqcmin = chiAminCoeffs[1]\n",
+    "a4  = cmax*nqcmax + cmed*nqcmed + cmin*nqcmin\n",
+    "\n",
+    "nqcmax = chiAmaxCoeffs[2]\n",
+    "nqcmed = chiAmedCoeffs[2]\n",
+    "nqcmin = chiAminCoeffs[2]\n",
+    "a5  = cmax*nqcmax + cmed*nqcmed + cmin*nqcmin\n",
+    "\n",
+    "nqcmax = chiAmaxCoeffs[3]\n",
+    "nqcmed = chiAmedCoeffs[3]\n",
+    "nqcmin = chiAminCoeffs[3]\n",
+    "b3  = cmax*nqcmax + cmed*nqcmed + cmin*nqcmin\n",
+    "nqcmax = chiAmaxCoeffs[4]\n",
+    "nqcmed = chiAmedCoeffs[4]\n",
+    "nqcmin = chiAminCoeffs[4]\n",
+    "b4  = cmax*nqcmax + cmed*nqcmed + cmin*nqcmin\n",
+    "\n",
+    "mag = 1. + (P[2]*P[2]/(P[0]*P[0]*omega*omega))*(a1 + a2/P[0] + (a3 + a3S)/(P[0]*np.sqrt(P[0])) + a4/(P[0]*P[0])\n",
+    "                                                + a5/(P[0]*P[0]*np.sqrt(P[0])))\n",
+    "\n",
+    "#KNOWLES: start here, need to find a3 computation (it's not a^3!)... see LALSimIMREOBNQCCorrection.c func XLALSimIMREOBNonQCCorrection\n",
     "for l in range(2, 9):\n",
     "    for m in range(1, l+1):\n",
     "        epsilon = (l + m) % 2\n",
@@ -1570,18 +1661,15 @@
     "            rholmPowl += auxflm\n",
     "        hlm = Tlm*Slm*rholmPowl*multipole\n",
     "        if (m*m*omega*omega*hlm*hlm) > 5.:\n",
-    "            #Why have I not computed NQC?\n",
-    "            #Before computing corretions, we have to compute actual NQC?\n",
+    "            NQC = #KNOWLES\n",
     "            hlm *= NQC\n",
-    "            #START HERE, KNOWLES\n",
     "        flux += m*m*omega*omega*hlm*hlm\n",
     "        if omega*omega > 1 or flux > 5:\n",
     "            flux = 0.\n",
     "        flux *= 8./np.pi\n",
     "flux /= eta\n",
     "rdot = -flux/dEdr\n",
-    "pr = rdot/(dHdpr/px)\n",
-    "#convert spherical to cartesian"
+    "pr = rdot/(dHdpr/px)\n"
    ]
   },
   {
