--- a/Tutorial-ScalarWave.ipynb
+++ b/Tutorial-ScalarWave.ipynb
@@ -321,28 +321,28 @@
       "   const REAL_SIMD_ARRAY uu_i0_i1_i2p4 = ReadSIMD(&in_gfs[IDX4(UUGF, i0,i1,i2+4)]);\n",
       "   const REAL_SIMD_ARRAY uu_i0_i1_i2p5 = ReadSIMD(&in_gfs[IDX4(UUGF, i0,i1,i2+5)]);\n",
       "   const REAL_SIMD_ARRAY vv = ReadSIMD(&in_gfs[IDX4(VVGF, i0,i1,i2)]);\n",
-      "   const double tmpFD_Rational_1_3150 = 0.0003174603174603174603174603174603175;\n",
-      "   const REAL_SIMD_ARRAY _Rational_1_3150 = ConstSIMD(tmpFD_Rational_1_3150);\n",
+      "   const double tmpFD_Rational_1_3150_FDcoeff = 0.0003174603174603174603174603174603175;\n",
+      "   const REAL_SIMD_ARRAY _Rational_1_3150_FDcoeff = ConstSIMD(tmpFD_Rational_1_3150_FDcoeff);\n",
       "   \n",
-      "   const double tmpFD_Rational_5_126 = 0.03968253968253968253968253968253968;\n",
-      "   const REAL_SIMD_ARRAY _Rational_5_126 = ConstSIMD(tmpFD_Rational_5_126);\n",
+      "   const double tmpFD_Rational_5_126_FDcoeff = 0.03968253968253968253968253968253968;\n",
+      "   const REAL_SIMD_ARRAY _Rational_5_126_FDcoeff = ConstSIMD(tmpFD_Rational_5_126_FDcoeff);\n",
       "   \n",
-      "   const double tmpFD_Rational_5_3 = 1.666666666666666666666666666666667;\n",
-      "   const REAL_SIMD_ARRAY _Rational_5_3 = ConstSIMD(tmpFD_Rational_5_3);\n",
+      "   const double tmpFD_Rational_5_3_FDcoeff = 1.666666666666666666666666666666667;\n",
+      "   const REAL_SIMD_ARRAY _Rational_5_3_FDcoeff = ConstSIMD(tmpFD_Rational_5_3_FDcoeff);\n",
       "   \n",
-      "   const double tmpFD_Rational_m5269_1800 = -2.927222222222222222222222222222222;\n",
-      "   const REAL_SIMD_ARRAY _Rational_m5269_1800 = ConstSIMD(tmpFD_Rational_m5269_1800);\n",
+      "   const double tmpFD_Rational_m5269_1800_FDcoeff = -2.927222222222222222222222222222222;\n",
+      "   const REAL_SIMD_ARRAY _Rational_m5269_1800_FDcoeff = ConstSIMD(tmpFD_Rational_m5269_1800_FDcoeff);\n",
       "   \n",
-      "   const double tmpFD_Rational_m5_1008 = -0.004960317460317460317460317460317460;\n",
-      "   const REAL_SIMD_ARRAY _Rational_m5_1008 = ConstSIMD(tmpFD_Rational_m5_1008);\n",
+      "   const double tmpFD_Rational_m5_1008_FDcoeff = -0.004960317460317460317460317460317460;\n",
+      "   const REAL_SIMD_ARRAY _Rational_m5_1008_FDcoeff = ConstSIMD(tmpFD_Rational_m5_1008_FDcoeff);\n",
       "   \n",
-      "   const double tmpFD_Rational_m5_21 = -0.2380952380952380952380952380952381;\n",
-      "   const REAL_SIMD_ARRAY _Rational_m5_21 = ConstSIMD(tmpFD_Rational_m5_21);\n",
+      "   const double tmpFD_Rational_m5_21_FDcoeff = -0.2380952380952380952380952380952381;\n",
+      "   const REAL_SIMD_ARRAY _Rational_m5_21_FDcoeff = ConstSIMD(tmpFD_Rational_m5_21_FDcoeff);\n",
       "   \n",
-      "   const REAL_SIMD_ARRAY tmpFD0 = MulSIMD(uu, _Rational_m5269_1800);\n",
-      "   const REAL_SIMD_ARRAY uu_dDD00 = MulSIMD(FusedMulAddSIMD(uu_i0p4_i1_i2, _Rational_m5_1008, FusedMulAddSIMD(uu_i0p3_i1_i2, _Rational_5_126, FusedMulAddSIMD(uu_i0p2_i1_i2, _Rational_m5_21, FusedMulAddSIMD(uu_i0p1_i1_i2, _Rational_5_3, FusedMulAddSIMD(uu_i0m5_i1_i2, _Rational_1_3150, FusedMulAddSIMD(uu_i0m4_i1_i2, _Rational_m5_1008, FusedMulAddSIMD(uu_i0m3_i1_i2, _Rational_5_126, FusedMulAddSIMD(uu_i0m2_i1_i2, _Rational_m5_21, FusedMulAddSIMD(uu_i0m1_i1_i2, _Rational_5_3, FusedMulAddSIMD(uu_i0p5_i1_i2, _Rational_1_3150, tmpFD0)))))))))), MulSIMD(invdx0, invdx0));\n",
-      "   const REAL_SIMD_ARRAY uu_dDD11 = MulSIMD(FusedMulAddSIMD(uu_i0_i1p4_i2, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1p3_i2, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1p2_i2, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1p1_i2, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1m5_i2, _Rational_1_3150, FusedMulAddSIMD(uu_i0_i1m4_i2, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1m3_i2, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1m2_i2, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1m1_i2, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1p5_i2, _Rational_1_3150, tmpFD0)))))))))), MulSIMD(invdx1, invdx1));\n",
-      "   const REAL_SIMD_ARRAY uu_dDD22 = MulSIMD(FusedMulAddSIMD(uu_i0_i1_i2p4, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1_i2p3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1_i2p2, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1_i2p1, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1_i2m5, _Rational_1_3150, FusedMulAddSIMD(uu_i0_i1_i2m4, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1_i2m3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1_i2m2, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1_i2m1, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1_i2p5, _Rational_1_3150, tmpFD0)))))))))), MulSIMD(invdx2, invdx2));\n",
+      "   const REAL_SIMD_ARRAY tmpFD0 = MulSIMD(uu, _Rational_m5269_1800_FDcoeff);\n",
+      "   const REAL_SIMD_ARRAY uu_dDD00 = MulSIMD(FusedMulAddSIMD(uu_i0p4_i1_i2, _Rational_m5_1008_FDcoeff, FusedMulAddSIMD(uu_i0p3_i1_i2, _Rational_5_126_FDcoeff, FusedMulAddSIMD(uu_i0p2_i1_i2, _Rational_m5_21_FDcoeff, FusedMulAddSIMD(uu_i0p1_i1_i2, _Rational_5_3_FDcoeff, FusedMulAddSIMD(uu_i0m5_i1_i2, _Rational_1_3150_FDcoeff, FusedMulAddSIMD(uu_i0m4_i1_i2, _Rational_m5_1008_FDcoeff, FusedMulAddSIMD(uu_i0m3_i1_i2, _Rational_5_126_FDcoeff, FusedMulAddSIMD(uu_i0m2_i1_i2, _Rational_m5_21_FDcoeff, FusedMulAddSIMD(uu_i0m1_i1_i2, _Rational_5_3_FDcoeff, FusedMulAddSIMD(uu_i0p5_i1_i2, _Rational_1_3150_FDcoeff, tmpFD0)))))))))), MulSIMD(invdx0, invdx0));\n",
+      "   const REAL_SIMD_ARRAY uu_dDD11 = MulSIMD(FusedMulAddSIMD(uu_i0_i1p4_i2, _Rational_m5_1008_FDcoeff, FusedMulAddSIMD(uu_i0_i1p3_i2, _Rational_5_126_FDcoeff, FusedMulAddSIMD(uu_i0_i1p2_i2, _Rational_m5_21_FDcoeff, FusedMulAddSIMD(uu_i0_i1p1_i2, _Rational_5_3_FDcoeff, FusedMulAddSIMD(uu_i0_i1m5_i2, _Rational_1_3150_FDcoeff, FusedMulAddSIMD(uu_i0_i1m4_i2, _Rational_m5_1008_FDcoeff, FusedMulAddSIMD(uu_i0_i1m3_i2, _Rational_5_126_FDcoeff, FusedMulAddSIMD(uu_i0_i1m2_i2, _Rational_m5_21_FDcoeff, FusedMulAddSIMD(uu_i0_i1m1_i2, _Rational_5_3_FDcoeff, FusedMulAddSIMD(uu_i0_i1p5_i2, _Rational_1_3150_FDcoeff, tmpFD0)))))))))), MulSIMD(invdx1, invdx1));\n",
+      "   const REAL_SIMD_ARRAY uu_dDD22 = MulSIMD(FusedMulAddSIMD(uu_i0_i1_i2p4, _Rational_m5_1008_FDcoeff, FusedMulAddSIMD(uu_i0_i1_i2p3, _Rational_5_126_FDcoeff, FusedMulAddSIMD(uu_i0_i1_i2p2, _Rational_m5_21_FDcoeff, FusedMulAddSIMD(uu_i0_i1_i2p1, _Rational_5_3_FDcoeff, FusedMulAddSIMD(uu_i0_i1_i2m5, _Rational_1_3150_FDcoeff, FusedMulAddSIMD(uu_i0_i1_i2m4, _Rational_m5_1008_FDcoeff, FusedMulAddSIMD(uu_i0_i1_i2m3, _Rational_5_126_FDcoeff, FusedMulAddSIMD(uu_i0_i1_i2m2, _Rational_m5_21_FDcoeff, FusedMulAddSIMD(uu_i0_i1_i2m1, _Rational_5_3_FDcoeff, FusedMulAddSIMD(uu_i0_i1_i2p5, _Rational_1_3150_FDcoeff, tmpFD0)))))))))), MulSIMD(invdx2, invdx2));\n",
       "   /* \n",
       "    * NRPy+ Finite Difference Code Generation, Step 2 of 2: Evaluate SymPy expressions and write to main memory:\n",
       "    */\n",
@@ -433,6 +433,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter ScalarWave.ScalarWave_RHSs::wavespeed\n",
       "^^^ Ignore the minor warning above. ^^^\n",
       "\n",
       "Consistency check between ScalarWave tutorial and NRPy+ module:\n",
@@ -535,9 +536,6 @@
    "outputs": [
     {
      "data": {
-      "text/latex": [
-       "$\\displaystyle 0$"
-      ],
       "text/plain": [
        "0"
       ]
@@ -577,6 +575,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter ScalarWave.InitialData_PlaneWave::time\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter ScalarWave.InitialData_PlaneWave::kk0\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter ScalarWave.InitialData_PlaneWave::kk1\n",
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter ScalarWave.InitialData_PlaneWave::kk2\n",
       "Consistency check between ScalarWave tutorial and NRPy+ module:\n",
       "('uu_ID - swid.uu_ID: Should be zero: ', 0)\n",
       "('vv_ID - swid.vv_ID: Should be zero: ', 0)\n"
@@ -630,7 +632,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ScalarWave.ipynb to latex\n",
-      "[NbConvertApp] Writing 64194 bytes to Tutorial-ScalarWave.tex\n",
+      "[NbConvertApp] Writing 60764 bytes to Tutorial-ScalarWave.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
