SIMD: #include ../SIMD/SIMD_intrinsics.h in all start-to-finish C codes that use SIMD intrinsics

--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.ipynb
@@ -640,60 +640,8 @@
     "\n",
     "#include \"declare_Cparameters_struct.h\"\n",
     "\n",
-    "// If compiled with AVX support:\n",
-    "#ifdef __AVX__\n",
-    "#include <immintrin.h>\n",
-    "#define REAL_SIMD_ARRAY __m256d\n",
-    "#define SIMD_width 4 // 4 doubles per loop iteration\n",
-    "#define ReadSIMD(a) _mm256_loadu_pd(a)\n",
-    "#define WriteSIMD(a,b) _mm256_storeu_pd(a,(b))\n",
-    "#define ConstSIMD(a) _mm256_set1_pd(a)\n",
-    "#define AddSIMD(a,b) _mm256_add_pd((a),(b))\n",
-    "#define SubSIMD(a,b) _mm256_sub_pd((a),(b))\n",
-    "#define MulSIMD(a,b) _mm256_mul_pd((a),(b))\n",
-    "#define DivSIMD(a,b) _mm256_div_pd((a),(b))\n",
-    "#define ExpSIMD(a) _mm256_exp_pd((a))\n",
-    "#define SinSIMD(a) _mm256_sin_pd((a))\n",
-    "#define CosSIMD(a) _mm256_cos_pd((a))\n",
-    "#ifdef __FMA__\n",
-    "#define FusedMulAddSIMD(a,b,c) _mm256_fmadd_pd((a),(b),(c))\n",
-    "#define FusedMulSubSIMD(a,b,c) _mm256_fmsub_pd((a),(b),(c))\n",
-    "#else\n",
-    "#define FusedMulAddSIMD(a,b,c) _mm256_add_pd(_mm256_mul_pd((a),(b)), (c)) // a*b+c\n",
-    "#define FusedMulSubSIMD(a,b,c) _mm256_sub_pd(_mm256_mul_pd((a),(b)), (c)) // a*b-c\n",
-    "#endif\n",
-    "#elif __SSE2__\n",
-    "#include <emmintrin.h>\n",
-    "#define REAL_SIMD_ARRAY __m128d\n",
-    "#define SIMD_width 2 // 2 doubles per loop iteration\n",
-    "#define ReadSIMD(a) _mm_loadu_pd(a)\n",
-    "#define WriteSIMD(a,b) _mm_storeu_pd(a,(b))\n",
-    "#define ConstSIMD(a) _mm_set1_pd(a)\n",
-    "#define AddSIMD(a,b) _mm_add_pd((a),(b))\n",
-    "#define SubSIMD(a,b) _mm_sub_pd((a),(b))\n",
-    "#define MulSIMD(a,b) _mm_mul_pd((a),(b))\n",
-    "#define DivSIMD(a,b) _mm_div_pd((a),(b))\n",
-    "#define ExpSIMD(a) _mm_exp_pd((a))\n",
-    "#define SinSIMD(a) _mm_sin_pd((a))\n",
-    "#define CosSIMD(a) _mm_cos_pd((a))\n",
-    "#define FusedMulAddSIMD(a,b,c) _mm_add_pd(_mm_mul_pd((a),(b)), (c)) // a*b+c\n",
-    "#define FusedMulSubSIMD(a,b,c) _mm_sub_pd(_mm_mul_pd((a),(b)), (c)) // a*b-c\n",
-    "#else\n",
-    "// If SIMD intrinsics unavailable:\n",
-    "#define REAL_SIMD_ARRAY REAL\n",
-    "#define SIMD_width 1 // 1 double per loop iteration\n",
-    "#define ConstSIMD(a) (a)\n",
-    "#define AddSIMD(a,b) ((a)+(b))\n",
-    "#define SubSIMD(a,b) ((a)-(b))\n",
-    "#define MulSIMD(a,b) ((a)*(b))\n",
-    "#define DivSIMD(a,b) ((a)/(b))\n",
-    "#define FusedMulAddSIMD(a,b,c) ((a)*(b) + (c))\n",
-    "#define SqrtSIMD(a) (sqrt(a))\n",
-    "#define SinSIMD(a) (sin(a))\n",
-    "#define CosSIMD(a) (cos(a))\n",
-    "#define WriteSIMD(a,b) *(a)=(b)\n",
-    "#define ReadSIMD(a) *(a)\n",
-    "#endif\n",
+    "// All SIMD intrinsics used in SIMD-enabled C code loops are defined here:\n",
+    "#include \"../SIMD/SIMD_intrinsics.h\"\n",
     "\n",
     "// Step P1: Import needed header files\n",
     "#include \"stdio.h\"\n",
@@ -947,14 +895,14 @@
      "text": [
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native ScalarWaveCurvilinear/ScalarWaveCurvilinear_Playground-SIMD.c -o ScalarWaveCurvilinear_Playground-SIMD -lm`...\n",
-      "Finished executing in 1.43617296219 seconds.\n",
+      "Finished executing in 1.03512096405 seconds.\n",
       "Finished compilation.\n",
       "Executing `taskset -c 0,1,2,3 ./ScalarWaveCurvilinear_Playground-SIMD 16  8 16`...\n",
-      "Finished executing in 0.43771481514 seconds.\n",
+      "Finished executing in 0.21381187439 seconds.\n",
       "Executing `taskset -c 0,1,2,3 ./ScalarWaveCurvilinear_Playground-SIMD 24 12 24`...\n",
-      "Finished executing in 2.04614591599 seconds.\n",
+      "Finished executing in 0.817451000214 seconds.\n",
       "Executing `taskset -c 0,1,2,3 ./ScalarWaveCurvilinear_Playground-SIMD 48 24 48`...\n",
-      "Finished executing in 66.3250789642 seconds.\n"
+      "Finished executing in 20.2954039574 seconds.\n"
      ]
     }
    ],
@@ -1100,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1058,7 @@
       "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.ipynb to latex\n",
       "[NbConvertApp] Support files will be in Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt_files/\n",
       "[NbConvertApp] Making directory Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt_files\n",
-      "[NbConvertApp] Writing 113196 bytes to Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.tex\n",
+      "[NbConvertApp] Writing 110118 bytes to Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
