--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear-SIMD.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear-SIMD.ipynb
@@ -505,45 +505,8 @@
     "\n",
     "#include \"declare_Cparameters_struct.h\"\n",
     "\n",
-    "// If compiled with AVX support:\n",
-    "#ifdef __AVX__\n",
-    "#include <immintrin.h>\n",
-    "#define REAL_SIMD_ARRAY __m256d\n",
-    "#define SIMD_width 4 // 4 doubles per loop iteration\n",
-    "#define ReadSIMD(a) _mm256_loadu_pd(a)\n",
-    "#define WriteSIMD(a,b) _mm256_storeu_pd(a,(b))\n",
-    "#define ConstSIMD(a) _mm256_set1_pd(a)\n",
-    "#define AddSIMD(a,b) _mm256_add_pd((a),(b))\n",
-    "#define SubSIMD(a,b) _mm256_sub_pd((a),(b))\n",
-    "#define MulSIMD(a,b) _mm256_mul_pd((a),(b))\n",
-    "#define DivSIMD(a,b) _mm256_div_pd((a),(b))\n",
-    "#define ExpSIMD(a) _mm256_exp_pd((a))\n",
-    "#define SinSIMD(a) _mm256_sin_pd((a))\n",
-    "#define CosSIMD(a) _mm256_cos_pd((a))\n",
-    "#ifdef __FMA__\n",
-    "#define FusedMulAddSIMD(a,b,c) _mm256_fmadd_pd((a),(b),(c))\n",
-    "#define FusedMulSubSIMD(a,b,c) _mm256_fmsub_pd((a),(b),(c))\n",
-    "#else\n",
-    "#define FusedMulAddSIMD(a,b,c) _mm256_add_pd(_mm256_mul_pd((a),(b)), (c)) // a*b+c\n",
-    "#define FusedMulSubSIMD(a,b,c) _mm256_sub_pd(_mm256_mul_pd((a),(b)), (c)) // a*b-c\n",
-    "#endif\n",
-    "#else\n",
-    "// If SIMD intrinsics unavailable:\n",
-    "#define REAL_SIMD_ARRAY REAL\n",
-    "#define SIMD_width 1 // 1 double per loop iteration\n",
-    "#define ConstSIMD(a) (a)\n",
-    "#define AddSIMD(a,b) ((a)+(b))\n",
-    "#define SubSIMD(a,b) ((a)-(b))\n",
-    "#define MulSIMD(a,b) ((a)*(b))\n",
-    "#define DivSIMD(a,b) ((a)/(b))\n",
-    "#define FusedMulAddSIMD(a,b,c) ((a)*(b) + (c))\n",
-    "#define SqrtSIMD(a) (sqrt(a))\n",
-    "#define ExpSIMD(a) (exp(a))\n",
-    "#define SinSIMD(a) (sin(a))\n",
-    "#define CosSIMD(a) (cos(a))\n",
-    "#define WriteSIMD(a,b) *(a)=(b)\n",
-    "#define ReadSIMD(a) *(a)\n",
-    "#endif\n",
+    "// All SIMD intrinsics used in SIMD-enabled C code loops are defined here:\n",
+    "#include \"../SIMD/SIMD_intrinsics.h\"\n",
     "\n",
     "// Step P1: Import needed header files\n",
     "#include \"stdio.h\"\n",
