--- a/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -67,7 +67,6 @@
     "from scipy.optimize import root\n",
     "from scipy.interpolate import interp1d, interp2d\n",
     "from numpy.linalg import norm\n",
-    "import factorized_modes as fm\n",
     "import NQC_corrections as nqc\n",
     "import nqc_interp as nqi\n",
     "\n",
@@ -410,10 +409,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os.path\n",
+    "if not os.path.isfile(\"/tmp/numpy_expressions.py\"):\n",
+    "    import Hamiltonian_and_derivs as Had\n",
+    "    Had.output_H_and_derivs()\n",
+    "    !cp /tmp/sympy_expression.py .\n",
+    "    !pypy sympy_expression.py\n",
+    "    \n",
     "# We need to import the following values from the derivative routine\n",
     "dHdx = 1.\n",
     "dHdp1 = 2.\n",
@@ -474,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1001,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,13 +1040,13 @@
     "        count = count + 1\n",
     "\n",
     "# Now reverse the expressions\n",
-    "with open('SEOBNR/Hamiltonian-Hreal_on_bottom.txt', 'w') as output:\n",
+    "with open('Hreal_on_bottom.py', 'w') as output:\n",
     "    for line in reversed(list(open(\"SEOBNR/Hamiltonian-Hreal_one_line_expressions.txt\"))):\n",
     "        output.write(\"%s\\n\" % line.rstrip().replace(\"sp.sqrt\", \"np.sqrt\").replace(\"sp.Rational\",\n",
     "                                \"np.divide\").replace(\"sp.abs\", \"np.abs\").replace(\"sp.log\",\n",
     "                                \"np.log\").replace(\"sp.sign\", \"np.sign\"))\n",
     "\n",
-    "Hreal = 1."
+    "import Hreal_on_bottom as Ham"
    ]
   },
   {
@@ -1064,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1092,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1148,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1172,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1199,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1256,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1415,55 +1421,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-43-f25d18a717e2>, line 234)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-43-f25d18a717e2>\"\u001b[0;36m, line \u001b[0;32m234\u001b[0m\n\u001b[0;31m    NQC = #KNOWLES\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# The following populates a matrix T_{lm} of resummed leading-order logarithms of tail effects\n",
+    "deltam = (m1 - m2)/(m1 + m2)\n",
     "flux = 0.\n",
     "\n",
-    "fa1 = interp1d(Domain, a1Range, kind='cubic')\n",
-    "fa2 = interp1d(Domain, a2Range, kind='cubic')\n",
-    "fa3 = interp1d(Domain, a3Range, kind='cubic')\n",
-    "fb1 = -interp1d(Domain, b1Range, kind='cubic')\n",
-    "fb2 = -interp1d(Domain, b2Range, kind='cubic')\n",
+    "fa1 = interp1d(nqi.domain, nqi.a1Range, kind='cubic')\n",
+    "fa2 = interp1d(nqi.domain, nqi.a2Range, kind='cubic')\n",
+    "fa3 = interp1d(nqi.domain, nqi.a3Range, kind='cubic')\n",
+    "fb1 = interp1d(nqi.domain, nqi.b1Range, kind='cubic')\n",
+    "fb2 = interp1d(nqi.domain, nqi.b2Range, kind='cubic')\n",
     "\n",
     "a1 = fa1(eta)\n",
     "a2 = fa2(eta)\n",
     "a3 = fa3(eta)\n",
     "b1 = -fb1(eta)\n",
-    "b2 = -f(b2eta)\n",
+    "b2 = -fb2(eta)\n",
     "\n",
-    "fa3sAmax = interp2d(aDomain, etaDomain, Amaxa3sVal, kind='cubic')\n",
-    "fa4Amax = interp2d(aDomain, etaDomain, Amaxa4Val, kind='cubic')\n",
-    "fa5Amax = interp2d(aDomain, etaDomain, Amaxa5Val, kind='cubic')\n",
-    "fb3Amax = interp2d(aDomain, etaDomain, Amaxb3Val, kind='cubic')\n",
-    "fb4Amax = interp2d(aDomain, etaDomain, Amaxb4Val, kind='cubic')\n",
+    "fa3sAmax = interp2d(nqi.aDomain, nqi.etaDomain, nqi.Amaxa3sVal, kind='cubic')\n",
+    "fa4Amax = interp2d(nqi.aDomain, nqi.etaDomain, nqi.Amaxa4Val, kind='cubic')\n",
+    "fa5Amax = interp2d(nqi.aDomain, nqi.etaDomain, nqi.Amaxa5Val, kind='cubic')\n",
+    "fb3Amax = interp2d(nqi.aDomain, nqi.etaDomain, nqi.Amaxb3Val, kind='cubic')\n",
+    "fb4Amax = interp2d(nqi.aDomain, nqi.etaDomain, nqi.Amaxb4Val, kind='cubic')\n",
     "\n",
-    "fa3sAmed = interp2d(aDomain, etaDomain, Ameda3sVal, kind='cubic')\n",
-    "fa4Amed = interp2d(aDomain, etaDomain, Ameda4Val, kind='cubic')\n",
-    "fa5Amed = interp2d(aDomain, etaDomain, Ameda5Val, kind='cubic')\n",
-    "fb3Amed = interp2d(aDomain, etaDomain, Amedb3Val, kind='cubic')\n",
-    "fb4Amed = interp2d(aDomain, etaDomain, Amedb4Val, kind='cubic')\n",
+    "fa3sAmed = interp2d(nqi.aDomain, nqi.etaDomain, nqi.Ameda3sVal, kind='cubic')\n",
+    "fa4Amed = interp2d(nqi.aDomain, nqi.etaDomain, nqi.Ameda4Val, kind='cubic')\n",
+    "fa5Amed = interp2d(nqi.aDomain, nqi.etaDomain, nqi.Ameda5Val, kind='cubic')\n",
+    "fb3Amed = interp2d(nqi.aDomain, nqi.etaDomain, nqi.Amedb3Val, kind='cubic')\n",
+    "fb4Amed = interp2d(nqi.aDomain, nqi.etaDomain, nqi.Amedb4Val, kind='cubic')\n",
     "\n",
-    "fa3sAmin = interp2d(aDomain, etaDomain, Amina3sVal, kind='cubic')\n",
-    "fa4Amin = interp2d(aDomain, etaDomain, Amina4Val, kind='cubic')\n",
-    "fa5Amin = interp2d(aDomain, etaDomain, Amina5Val, kind='cubic')\n",
-    "fb3Amin = interp2d(aDomain, etaDomain, Aminb3Val, kind='cubic')\n",
-    "fb4Amin = interp2d(aDomain, etaDomain, Aminb4Val, kind='cubic')\n",
+    "fa3sAmin = interp2d(nqi.aDomain, nqi.etaDomain, nqi.Amina3sVal, kind='cubic')\n",
+    "fa4Amin = interp2d(nqi.aDomain, nqi.etaDomain, nqi.Amina4Val, kind='cubic')\n",
+    "fa5Amin = interp2d(nqi.aDomain, nqi.etaDomain, nqi.Amina5Val, kind='cubic')\n",
+    "fb3Amin = interp2d(nqi.aDomain, nqi.etaDomain, nqi.Aminb3Val, kind='cubic')\n",
+    "fb4Amin = interp2d(nqi.aDomain, nqi.etaDomain, nqi.Aminb4Val, kind='cubic')\n",
     "\n",
-    "chiAmaxCoeffs = [fa3sAmax[a,eta], fa4Amax[a,eta], fa5Amax[a,eta], fb3Amax[a,eta], fb4Amax[a,eta]]\n",
-    "chiAmedCoeffs = [fa3sAmed[a,eta], fa4Amed[a,eta], fa5Amed[a,eta], fb3Amed[a,eta], fb4Amed[a,eta]]\n",
-    "chiAminCoeffs = [fa3sAmin[a,eta], fa4Amin[a,eta], fa5Amin[a,eta], fb3Amin[a,eta], fb4Amin[a,eta]]\n",
+    "chiAmaxCoeffs = [fa3sAmax(a,eta), fa4Amax(a,eta), fa5Amax(a,eta), fb3Amax(a,eta), fb4Amax(a,eta)]\n",
+    "chiAmedCoeffs = [fa3sAmed(a,eta), fa4Amed(a,eta), fa5Amed(a,eta), fb3Amed(a,eta), fb4Amed(a,eta)]\n",
+    "chiAminCoeffs = [fa3sAmin(a,eta), fa4Amin(a,eta), fa5Amin(a,eta), fb3Amin(a,eta), fb4Amin(a,eta)]\n",
     "\n",
     "chi = a/(1. - 2.*eta)\n",
     "\n",
@@ -1472,17 +1470,17 @@
     "    chiAmin = (chi - 1.)/2.\n",
     "else:\n",
     "    if chi <= 0:\n",
-    "        chiAmax = (1. + chi)*(1. - 2.*eta)/(1.+ dM - 2.*eta)\n",
-    "        if (1. + dm - 2.*eta + 2.*chi*(1. - 2.*eta))/(1. - dm - 2.*eta) < 1.:\n",
-    "            chiAmin = -(1. + chi)*(1. - 2.*eta)/(1. - dM - 2.*eta)\n",
+    "        chiAmax = (1. + chi)*(1. - 2.*eta)/(1.+ deltam - 2.*eta)\n",
+    "        if (1. + deltam - 2.*eta + 2.*chi*(1. - 2.*eta))/(1. - deltam - 2.*eta) < 1.:\n",
+    "            chiAmin = -(1. + chi)*(1. - 2.*eta)/(1. - deltam - 2.*eta)\n",
     "        else:\n",
-    "            chiAmin = -(1. - chi)*(1. - 2.*eta)/(1. + dm - 2.*eta)\n",
+    "            chiAmin = -(1. - chi)*(1. - 2.*eta)/(1. + deltam - 2.*eta)\n",
     "    else:\n",
-    "        chiAmin = -(1. - chi)*(1. - 2.*eta)/(1. + dm - 2.*eta)\n",
-    "        if -(1. + dm - 2.*eta - 2.*chi*(1. - 2.*eta))/(1. - dm - 2.*eta) > -1.:\n",
-    "            chiAmax = (1. - chi)*(1. - 2.*eta)/(1. - dm - 2.*eta)\n",
+    "        chiAmin = -(1. - chi)*(1. - 2.*eta)/(1. + deltam - 2.*eta)\n",
+    "        if -(1. + deltam - 2.*eta - 2.*chi*(1. - 2.*eta))/(1. - deltam - 2.*eta) > -1.:\n",
+    "            chiAmax = (1. - chi)*(1. - 2.*eta)/(1. - deltam - 2.*eta)\n",
     "        else:\n",
-    "            chiAmax = (1. + chi)*(1. - 2.*eta)/(1. + dm - 2.*eta)\n",
+    "            chiAmax = (1. + chi)*(1. - 2.*eta)/(1. + deltam - 2.*eta)\n",
     "\n",
     "chiAmed = (chiAmax + chiAmin)/2.\n",
     "if chiAmax < 1.0e-15:\n",
@@ -1518,10 +1516,17 @@
     "nqcmin = chiAminCoeffs[4]\n",
     "b4  = cmax*nqcmax + cmed*nqcmed + cmin*nqcmin\n",
     "\n",
-    "mag = 1. + (P[2]*P[2]/(P[0]*P[0]*omega*omega))*(a1 + a2/P[0] + (a3 + a3S)/(P[0]*np.sqrt(P[0])) + a4/(P[0]*P[0])\n",
-    "                                                + a5/(P[0]*P[0]*np.sqrt(P[0])))\n",
+    "rsq = polar[0]*polar[0]\n",
+    "sqrtr = np.sqrt(polar[0])\n",
+    "prsq = polar[2]*polar[2]\n",
     "\n",
-    "#KNOWLES: start here, need to find a3 computation (it's not a^3!)... see LALSimIMREOBNQCCorrection.c func XLALSimIMREOBNonQCCorrection\n",
+    "\n",
+    "mag = 1. + (prsq/(rsq*omega*omega))*(a1 + a2/polar[0] + (a3 + a3S)/(polar[0]*sqrtr) + a4/rsq + a5/(rsq*sqrtr))\n",
+    "phase = b1*polar[2]/(polar[0]*omega) + prsq*polar[2]/(polar[0]*omega)*(b2 + b3/sqrtr + b4/polar[0])\n",
+    "nqc = complex(mag*np.cos(phase),0)\n",
+    "nqc += complex(0,mag*np.sin(phase))\n",
+    "\n",
+    "import factorized_modes as fm\n",
     "for l in range(2, 9):\n",
     "    for m in range(1, l+1):\n",
     "        epsilon = (l + m) % 2\n",
@@ -1661,15 +1666,15 @@
     "            rholmPowl += auxflm\n",
     "        hlm = Tlm*Slm*rholmPowl*multipole\n",
     "        if (m*m*omega*omega*hlm*hlm) > 5.:\n",
-    "            NQC = #KNOWLES\n",
-    "            hlm *= NQC\n",
+    "            hlm *= nqc\n",
     "        flux += m*m*omega*omega*hlm*hlm\n",
     "        if omega*omega > 1 or flux > 5:\n",
     "            flux = 0.\n",
     "        flux *= 8./np.pi\n",
     "flux /= eta\n",
     "rdot = -flux/dEdr\n",
-    "pr = rdot/(dHdpr/px)\n"
+    "\n",
+    "pr = rdot/(dHdpr/px)"
    ]
   },
   {
@@ -1880,21 +1885,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
