Finished rearranging the C code generation into appropriate notebooks. Documentation still needs to be written for several parts.

--- a/Tutorial-GiRaFFE_HO_C_code_library-A2B.ipynb
+++ b/Tutorial-GiRaFFE_HO_C_code_library-A2B.ipynb
@@ -8,7 +8,173 @@
     "\n",
     "### Author: Patrick Nelson\n",
     "\n",
-    "This writes and documents the C code that `GiRaFFE_HO` uses to compute the magnetic fields from the vector potential. This is a relatively straightforward calculation, but requires care to be taken in the ghost zones. "
+    "This writes and documents the C code that `GiRaFFE_HO` uses to compute the magnetic fields from the vector potential. This is a relatively straightforward calculation, but requires care to be taken in the ghost zones. \n",
+    "These expressions are used to calculate the magnetic fields from the vector potential. \n",
+    "\n",
+    "We will also need to compute $B^i$ everywhere in order to evolve $\\tilde{S}_i$. However, $B^i = \\epsilon^{ijk} \\partial_j A_k$ requires derivatives of $A_i$, so getting $B^i$ will require some finesse. A chief aspect of this will require using lower-order finite differencing in the ghost zones. To that end, we will create header files for each finite differencing order $\\leq 10$, as well as upwinded- and downwinded-derivatives at 2nd order. These will let us compute the derivative at the outermost gridpoints."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "initialize_Cparam() minor warning: Did nothing; already initialized parameter smallbPoynET::M_PI\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_10.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_8.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_6.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_4.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_2.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x0D.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x0U.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x1D.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x1U.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x2D.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone/B_from_A_2x2U.h\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The A-to-B driver\n",
+    "from outputC import *\n",
+    "import grid as gri\n",
+    "import indexedexp as ixp\n",
+    "import NRPy_param_funcs as par\n",
+    "import finite_difference as fin\n",
+    "\n",
+    "# Set spatial dimension (must be 3 for BSSN)\n",
+    "DIM = 3\n",
+    "par.set_parval_from_str(\"grid::DIM\",DIM)\n",
+    "\n",
+    "# Import the GiRaFFE_HO_v2 module and run its function to build BU\n",
+    "import GiRaFFE_HO.GiRaFFE_Higher_Order_v2 as gho\n",
+    "gho.GiRaFFE_Higher_Order_v2()\n",
+    "\n",
+    "# Import the Levi-Civita symbol and build the corresponding tensor.\n",
+    "# We already have a handy function to define the Levi-Civita symbol in WeylScalars\n",
+    "import WeylScal4NRPy.WeylScalars_Cartesian as weyl\n",
+    "LeviCivitaDDD = weyl.define_LeviCivitaSymbol_rank3()\n",
+    "LeviCivitaUUU = ixp.zerorank3()\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            LCijk = LeviCivitaDDD[i][j][k]\n",
+    "            #LeviCivitaDDD[i][j][k] = LCijk * sp.sqrt(gho.gammadet)\n",
+    "            LeviCivitaUUU[i][j][k] = LCijk / sp.sqrt(gho.gammadet)\n",
+    "\n",
+    "AD_dD = ixp.declarerank2(\"AD_dD\",\"nosym\")\n",
+    "BU = ixp.zerorank1() # BU is already registered as a gridfunction, but we need to zero its values and declare it in this scope.\n",
+    "# We can use this function to compactly reset to expressions to print at each FD order.\n",
+    "def set_BU_to_print():\n",
+    "    return [lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
+    "            lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
+    "            lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])]            \n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            BU[i] += LeviCivitaUUU[i][j][k] * AD_dD[k][j]\n",
+    "\n",
+    "# We'll lower the FD order at each stage and write to a new file.\n",
+    "# But first, we need to save the original order\n",
+    "original_order = par.parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\")\n",
+    "\n",
+    "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 10)\n",
+    "fin.FD_outputC(\"GiRaFFE_standalone/B_from_A_10.h\",set_BU_to_print(),params=\"outCverbose=False\")\n",
+    "\n",
+    "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 8)\n",
+    "fin.FD_outputC(\"GiRaFFE_standalone/B_from_A_8.h\",set_BU_to_print(),params=\"outCverbose=False\")\n",
+    "\n",
+    "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 6)\n",
+    "fin.FD_outputC(\"GiRaFFE_standalone/B_from_A_6.h\",set_BU_to_print(),params=\"outCverbose=False\")\n",
+    "\n",
+    "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 4)\n",
+    "fin.FD_outputC(\"GiRaFFE_standalone/B_from_A_4.h\",set_BU_to_print(),params=\"outCverbose=False\")\n",
+    "\n",
+    "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 2)\n",
+    "fin.FD_outputC(\"GiRaFFE_standalone/B_from_A_2.h\",set_BU_to_print(),params=\"outCverbose=False\")\n",
+    "\n",
+    "# For the outermost points, we'll need a separate file for each face. \n",
+    "# These will correspond to an upwinded and a downwinded file for each direction.\n",
+    "AD_ddnD = ixp.declarerank2(\"AD_ddnD\",\"nosym\")\n",
+    "for i in range(DIM):\n",
+    "    BU[i] = 0\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            if j is 0:\n",
+    "                BU[i] += LeviCivitaUUU[i][j][k] * AD_ddnD[k][j]\n",
+    "            else:\n",
+    "                BU[i] += LeviCivitaUUU[i][j][k] * AD_dD[k][j]\n",
+    "\n",
+    "fin.FD_outputC(\"GiRaFFE_standalone/B_from_A_2x0D.h\",set_BU_to_print(),params=\"outCverbose=False\")\n",
+    "\n",
+    "AD_dupD = ixp.declarerank2(\"AD_dupD\",\"nosym\")\n",
+    "for i in range(DIM):\n",
+    "    BU[i] = 0\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            if j is 0:\n",
+    "                BU[i] += LeviCivitaUUU[i][j][k] * AD_dupD[k][j]\n",
+    "            else:\n",
+    "                BU[i] += LeviCivitaUUU[i][j][k] * AD_dD[k][j]\n",
+    "\n",
+    "fin.FD_outputC(\"GiRaFFE_standalone/B_from_A_2x0U.h\",set_BU_to_print(),params=\"outCverbose=False\")\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    BU[i] = 0\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            if j is 1:\n",
+    "                BU[i] += LeviCivitaUUU[i][j][k] * AD_ddnD[k][j]\n",
+    "            else:\n",
+    "                BU[i] += LeviCivitaUUU[i][j][k] * AD_dD[k][j]\n",
+    "\n",
+    "fin.FD_outputC(\"GiRaFFE_standalone/B_from_A_2x1D.h\",set_BU_to_print(),params=\"outCverbose=False\")\n",
+    "for i in range(DIM):\n",
+    "    BU[i] = 0\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            if j is 1:\n",
+    "                BU[i] += LeviCivitaUUU[i][j][k] * AD_dupD[k][j]\n",
+    "            else:\n",
+    "                BU[i] += LeviCivitaUUU[i][j][k] * AD_dD[k][j]\n",
+    "\n",
+    "fin.FD_outputC(\"GiRaFFE_standalone/B_from_A_2x1U.h\",set_BU_to_print(),params=\"outCverbose=False\")\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    BU[i] = 0\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            if j is 2:\n",
+    "                BU[i] += LeviCivitaUUU[i][j][k] * AD_ddnD[k][j]\n",
+    "            else:\n",
+    "                BU[i] += LeviCivitaUUU[i][j][k] * AD_dD[k][j]\n",
+    "\n",
+    "fin.FD_outputC(\"GiRaFFE_standalone/B_from_A_2x2D.h\",set_BU_to_print(),params=\"outCverbose=False\")\n",
+    "for i in range(DIM):\n",
+    "    BU[i] = 0\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            if j is 2:\n",
+    "                BU[i] += LeviCivitaUUU[i][j][k] * AD_dupD[k][j]\n",
+    "            else:\n",
+    "                BU[i] += LeviCivitaUUU[i][j][k] * AD_dD[k][j]\n",
+    "\n",
+    "fin.FD_outputC(\"GiRaFFE_standalone/B_from_A_2x2U.h\",set_BU_to_print(),params=\"outCverbose=False\")\n",
+    "\n",
+    "# And now, we set the FD order back to what it was.\n",
+    "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", original_order)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since we need to do some extra work to fill the ghost zones when we solve for $B^i$ from $A_k$, we will put the functions in their own file to keep things cleaner."
    ]
   },
   {
@@ -16,7 +182,138 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%writefile GiRaFFE_standalone/driver_AtoB.c\n",
+    "#include <math.h>\n",
+    "#include <stdio.h>\n",
+    "#include <stdlib.h>\n",
+    "\n",
+    "#ifndef REAL\n",
+    "#define REAL double\n",
+    "#include \"NGHOSTS.h\" // A NRPy+-generated file, which is set based on FD_CENTDERIVS_ORDER.\n",
+    "#include \"../CurviBoundaryConditions/gridfunction_defines.h\"\n",
+    "#define IDX4(g,i,j,k) \\\n",
+    "( (i) + Nxx_plus_2NGHOSTS[0] * ( (j) + Nxx_plus_2NGHOSTS[1] * ( (k) + Nxx_plus_2NGHOSTS[2] * (g) ) ) )\n",
+    "#define IDX3(i,j,k) ( (i) + Nxx_plus_2NGHOSTS[0] * ( (j) + Nxx_plus_2NGHOSTS[1] * (k) ) )\n",
+    "// Assuming idx = IDX3(i,j,k). Much faster if idx can be reused over and over:\n",
+    "#define IDX4pt(g,idx)   ( (idx) + (Nxx_plus_2NGHOSTS[0]*Nxx_plus_2NGHOSTS[1]*Nxx_plus_2NGHOSTS[2]) * (g) )\n",
+    "#endif\n",
+    "\n",
+    "// In the standalone, these are already defined by the boundary conditions module.\n",
+    "/*const int MAXFACE = -1;\n",
+    "*const int NUL     = +0;\n",
+    "*const int MINFACE = +1;\n",
+    "*/\n",
+    "\n",
+    "// Declare boundary condition FACE_UPDATE function,\n",
+    "// which fills in the ghost zones with successively\n",
+    "// lower order finite differencing\n",
+    "void AtoB(const int ORDER, const int Nxx_plus_2NGHOSTS[3], const REAL *in_gfs, REAL *aux_gfs, const REAL dxx[3],\n",
+    "          const int i0min, const int i0max, \n",
+    "          const int i1min, const int i1max, \n",
+    "          const int i2min, const int i2max, \n",
+    "          const int FACEX0, const int FACEX1, const int FACEX2) {\n",
+    "  \n",
+    "  const REAL invdx0 = 1.0 / dxx[0];\n",
+    "  const REAL invdx1 = 1.0 / dxx[1];\n",
+    "  const REAL invdx2 = 1.0 / dxx[2];\n",
+    "\n",
+    "  if(ORDER==8) {\n",
+    "    //printf(\"Computing A to B with Order = 8...\\n\");\n",
+    "    for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
+    "        #include \"B_from_A_8.h\"\n",
+    "    }\n",
+    "  } else if(ORDER==6) {\n",
+    "    //printf(\"Computing A to B with Order = 6...\\n\");\n",
+    "    for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
+    "        #include \"B_from_A_6.h\"\n",
+    "    }\n",
+    "  } else if(ORDER==4) {\n",
+    "    //printf(\"Computing A to B with Order = 4...\\n\");\n",
+    "    for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
+    "        #include \"B_from_A_4.h\"\n",
+    "    }\n",
+    "  } else if(ORDER==2) {\n",
+    "    //printf(\"Computing A to B with Order = 2...\\n\");\n",
+    "    for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
+    "        #include \"B_from_A_2.h\"\n",
+    "    } \n",
+    "  } else if(ORDER==0) {\n",
+    "    if(FACEX0==MAXFACE) {\n",
+    "    //printf(\"Computing A to B at x = max...\\n\");\n",
+    "        for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
+    "            #include \"B_from_A_2x0D.h\"\n",
+    "        }\n",
+    "    } else if(FACEX0==MINFACE) {\n",
+    "    //printf(\"Computing A to B at x = min...\\n\");\n",
+    "        for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
+    "            #include \"B_from_A_2x0U.h\"\n",
+    "        }\n",
+    "    } else if(FACEX1==MAXFACE) {\n",
+    "    //printf(\"Computing A to B at y = max...\\n\");\n",
+    "        for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
+    "            #include \"B_from_A_2x1D.h\"\n",
+    "        }\n",
+    "    } else if(FACEX1==MINFACE) {\n",
+    "    //printf(\"Computing A to B at y = min...\\n\");\n",
+    "        for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
+    "            #include \"B_from_A_2x1U.h\"\n",
+    "        }\n",
+    "    } else if(FACEX2==MAXFACE) {\n",
+    "    //printf(\"Computing A to B at z = max...\\n\");\n",
+    "        for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
+    "            #include \"B_from_A_2x2D.h\"\n",
+    "        }\n",
+    "    } else if(FACEX2==MINFACE) {\n",
+    "    //printf(\"Computing A to B at z = min...\\n\");\n",
+    "        for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
+    "            #include \"B_from_A_2x2U.h\"\n",
+    "        }\n",
+    "    } else {\n",
+    "        printf(\"ERROR. FACEX parameters not set properly.\\n\");\n",
+    "        exit(1);\n",
+    "    }\n",
+    "  } else {\n",
+    "    printf(\"ERROR. ORDER = %d not supported!\\n\",ORDER);\n",
+    "    exit(1);\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "void driver_A_to_B(const int Nxx[3],const int Nxx_plus_2NGHOSTS[3], const REAL dxx[3],const REAL *in_gfs,REAL *aux_gfs) {\n",
+    "  \n",
+    "  const int *Nx = Nxx;\n",
+    "  int ORDER = NGHOSTS*2;\n",
+    "  for(int ii=0;ii<Nxx_plus_2NGHOSTS[2]*Nxx_plus_2NGHOSTS[1]*Nxx_plus_2NGHOSTS[0];ii++) {\n",
+    "      aux_gfs[IDX4pt(BU0GF,ii)] = 1.0 / 0.0;\n",
+    "      aux_gfs[IDX4pt(BU1GF,ii)] = 1.0 / 0.0;\n",
+    "      aux_gfs[IDX4pt(BU2GF,ii)] = 1.0 / 0.0;\n",
+    "  }\n",
+    "\n",
+    "  //printf(\"Starting A to B driver with Order = %d...\\n\",ORDER);\n",
+    "  int imin[3] = { NGHOSTS, NGHOSTS, NGHOSTS };\n",
+    "  int imax[3] = { Nx[0]+NGHOSTS, Nx[1]+NGHOSTS, Nx[2]+NGHOSTS };\n",
+    "  AtoB(ORDER, Nxx_plus_2NGHOSTS, in_gfs, aux_gfs,dxx, imin[0],imax[0],imin[1],imax[1],imin[2],imax[2], NUL,NUL,NUL);\n",
+    "  while(ORDER>0) {\n",
+    "      // After updating each face, adjust imin[] and imax[] \n",
+    "      //   to reflect the newly-updated face extents.\n",
+    "      ORDER -= 2;\n",
+    "      AtoB(ORDER, Nxx_plus_2NGHOSTS, in_gfs, aux_gfs,dxx, imin[0]-1,imin[0], imin[1],imax[1], imin[2],imax[2], MINFACE,NUL,NUL); \n",
+    "      if(ORDER!=0) imin[0]--;\n",
+    "      AtoB(ORDER, Nxx_plus_2NGHOSTS, in_gfs, aux_gfs,dxx, imax[0],imax[0]+1, imin[1],imax[1], imin[2],imax[2], MAXFACE,NUL,NUL); \n",
+    "      if(ORDER!=0) imax[0]++;\n",
+    "\n",
+    "      AtoB(ORDER, Nxx_plus_2NGHOSTS, in_gfs, aux_gfs,dxx, imin[0],imax[0], imin[1]-1,imin[1], imin[2],imax[2], NUL,MINFACE,NUL); \n",
+    "      if(ORDER!=0) imin[1]--;\n",
+    "      AtoB(ORDER, Nxx_plus_2NGHOSTS, in_gfs, aux_gfs,dxx, imin[0],imax[0], imax[1],imax[1]+1, imin[2],imax[2], NUL,MAXFACE,NUL); \n",
+    "      if(ORDER!=0) imax[1]++;\n",
+    "\n",
+    "      AtoB(ORDER, Nxx_plus_2NGHOSTS, in_gfs, aux_gfs,dxx, imin[0],imax[0], imin[1],imax[1], imin[2]-1,imin[2], NUL,NUL,MINFACE); \n",
+    "      if(ORDER!=0) imin[2]--;\n",
+    "      AtoB(ORDER, Nxx_plus_2NGHOSTS, in_gfs, aux_gfs,dxx, imin[0],imax[0], imin[1],imax[1], imax[2],imax[2]+1, NUL,NUL,MAXFACE); \n",
+    "      if(ORDER!=0) imax[2]++;\n",
+    "    }\n",
+    "}\n"
+   ]
   }
  ],
  "metadata": {
